--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Forbidden{% endblock %}
+{% block title %}微博 - Forbidden{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
