--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -17,7 +17,7 @@
                 {% endif %}
             </div>
             <div class="post-footer">
-                <a href="{{ url_for('main.post', id=post.id) }}"><span class="label label-default">固定链接</span></a>
+                <a href="{{ url_for('main.post', id=post.id) }}"><span class="label label-default">博客链接</span></a>
                 {% if current_user == post.author %}
                 <a href="{{ url_for('main.edit_post', id=post.id) }}"><span class="label label-primary">编辑博客</span> </a>
                 {% elif current_user.is_administrator() %}
