--- a/app/templates/auth/email/reset_password.html
+++ b/app/templates/auth/email/reset_password.html
@@ -1,8 +1,7 @@
-<p>Dear {{ user.username }},</p>
-<p>To reset your password <a href="{{ url_for('auth.password_reset', token=token, _external=True) }}">click here</a>.</p>
-<p>Alternatively, you can paste the following link in your browser's address bar:</p>
+<p>亲爱的 {{ user.username }},</p>
+<p>重新设置密码 <a href="{{ url_for('auth.password_reset', token=token, _external=True) }}">点击这里</a>.</p>
+<p>或者，您可以将以下链接粘贴到您的浏览器地址栏:/p>
 <p>{{ url_for('auth.password_reset', token=token, _external=True) }}</p>
-<p>If you have not requested a password reset simply ignore this message.</p>
-<p>Sincerely,</p>
-<p>The Flasky Team</p>
-<p><small>Note: replies to this email address are not monitored.</small></p>
+<p>如果您没有要求重置密码，请忽略此消息。</p>
+<p>祝好，</p>
+<p>微博团队</p>
