--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky - Register{% endblock %}
+{% block title %}微博 - 注册{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Register</h1>
+    <h1>注册您的账号</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
