--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Confirm your account{% endblock %}
+{% block title %}微博 - 确认您的账号{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>
-        Hello, {{ current_user.username }}!
+        你好, {{ current_user.username }}!
     </h1>
-    <h3>You have not confirmed your account yet.</h3>
+    <h3>您还没有确认您的账户。</h3>
     <p>
-        Before you can access this site you need to confirm your account.
-        Check your inbox, you should have received an email with a confirmation link.
+        在您访问本网站之前，您需要确认您的帐户。
+        检查您的收件箱，您应该已经收到一封带有确认链接的电子邮件。
     </p>
     <p>
-        Need another confirmation email?
-        <a href="{{ url_for('auth.resend_confirmation') }}">Click here</a>
+        需要重发另一封确认邮件吗?
+        <a href="{{ url_for('auth.resend_confirmation') }}">点击这里</a>
     </p>
 </div>
 {% endblock %}
