--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -1,7 +1,7 @@
 {%  extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky - Edit Post{% endblock %}
+{% block title %}微博 - 编辑博客{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
