--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,12 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}欢迎登录博客{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}
-    {% else %}Stranger{% endif %}!</h1>
+    <h1>你好, {% if current_user.is_authenticated %}{{ current_user.username }}
+    {% else %}未登录的用户{% endif %}!</h1>
 </div>
 <div>
     {% if current_user.can(Permission.WRITE) %}
