--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -19,7 +19,7 @@
         <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
         {% endif %}
         {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-        <p>Member since {{ moment(user.member_since).format('L') }}. Last seen {{ moment(user.last_seen).fromNow() }}.</p>
+        <p>注册时间： {{ moment(user.member_since).format('L') }}。 上次登录时间： {{ moment(user.last_seen).fromNow() }}。</p>
         <p>
             {% if user == current_user %}
             <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">编辑资料</a>
@@ -41,7 +41,7 @@
     {% endif %}
     </div>
     </div>
-    <h3>Post by {{ user.username }} :</h3>
+    <h3>{{ user.username }} 所发的全部微博 :</h3>
     {% include '_posts.html' %}
      <div class="pagination">
     {{ macros.pagination_widget(pagination, 'main.user', username=user.username) }}
